# hallucination-guard

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py  claims.py  config.py  detector.py  highlight.py  main.py  scorer.py  verifier.py
docs/: ARCHITECTURE.md
examples/: api_client.py  api_usage.py  basic_usage.py  langchain_integration.py  llamaindex_integration.py  rag_pipeline.py  streamlit_app.py
npm/: README.md  package.json
npm/src/: index.ts
src/hallucination_guard/: __init__.py  cli.py  sdk.py
src/hallucination_guard/api/: server.py
src/hallucination_guard/core/: __init__.py  claims.py  detector.py  explainer.py  highlight.py  scorer.py  verifier.py
src/hallucination_guard/integrations/: __init__.py  langchain.py  llamaindex.py  rag.py
src/hallucination_guard/utils/: config.py
tests/: golden_dataset.json  sample_cases.json  test_api.py  test_claims.py  test_detector.py  test_explainer.py  test_highlight.py  test_scorer.py  test_verifier.py
